--- a/entity-crud/src/main/resources/templates/fragments/publica-nav.html
+++ b/entity-crud/src/main/resources/templates/fragments/publica-nav.html
@@ -3,7 +3,7 @@
 <body>
 	<nav th:fragment="nav" class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Biblioteca</a>
+			<a class="navbar-brand" href="#">CRUD </a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
