--- a/entity-crud/src/main/resources/templates/auth/admin/admin-listar-usuario.html
+++ b/entity-crud/src/main/resources/templates/auth/admin/admin-listar-usuario.html
@@ -52,6 +52,12 @@
 					   th:href="@{/usuario/editar/{id}(id=${usuario.id})}">
 					   Editar</a>
 				</td>
+				
+				<td>
+					<a class="btn btn-outline-primary btn-sm" 
+					   th:href="@{/usuario/editarPapel/{id}(id=${usuario.id})}">
+					   Papéis</a>
+				</td>
 			</tr>
 		</tbody>
 	</table>    
