--- a/entity-crud/src/main/resources/templates/publica-criar-usuario.html
+++ b/entity-crud/src/main/resources/templates/publica-criar-usuario.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 <body>
-<div th:replace="fragments/publica-nav :: nav"></div>
+<div th:insert="fragments/publica-nav :: nav"></div>
 <div class="container">
   <div class="row">  	
     <div class="col">
@@ -77,7 +77,10 @@
 			    </div>
 				<div class="col-sm-5"> 
 			    	<span class="mensagem" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></span>
-			    </div>
+			    	
+			    	<span class="mensagem" th:if="${loginExiste}" th:text="${loginExiste}"></span>
+			    	
+				</div>
 			</div>
 			
 			<div class="row mb-3">
