--- a/entity-crud/src/main/resources/templates/auth/admin/admin-editar-papel-usuario.html
+++ b/entity-crud/src/main/resources/templates/auth/admin/admin-editar-papel-usuario.html
@@ -69,6 +69,23 @@
 								disabled>
 						</div>
 					</div>					
+	
+					<div class="row mb-3">
+						<label class="col-sm-1 col-form-label">Ativado?:</label>
+						<div class="col-sm-2">
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" value="true"
+									th:field="*{ativo}"> 
+								<label class="form-check-label">ativo</label>
+							</div>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" value="false"
+									th:field="*{ativo}"> 
+								<label class="form-check-label">não ativo</label>
+							</div>
+						</div>
+					</div>					
+
 
 					<div class="row mb-3">
 						<label class="col-sm-1 col-form-label">Papéis:</label>
@@ -85,7 +102,10 @@
 									<label class="form-check-label" th:text="${pp.papel}"></label>
 								</div>
 							</th:block>	
-						</div>						
+						</div>	
+						<div class="col-sm-5">
+							<span class="mensagem" th:if="${mensagem}" th:text="${mensagem}"></span>
+						</div>					
 					</div>
 
 					<input class="btn btn-primary" type="submit" value="Alterar" />
