--- a/entity-crud/src/main/resources/templates/auth/admin/admin-listar-usuario.html
+++ b/entity-crud/src/main/resources/templates/auth/admin/admin-listar-usuario.html
@@ -39,6 +39,17 @@
 				<td><span th:text="${usuario.cpf}"> Cpf </span></td>
 				<td><span th:text="${#dates.format(usuario.dataNascimento, 'dd/MM/yyyy')}"> Nascimento </span></td>
 				<td><span th:text="${usuario.email}"> E-mail </span></td>
+				
+				<td>
+					<span th:text="${usuario.ativo} ? 'ATIVO' : 'NÃO ATIVO'"> Ativo? </span>
+				</td>
+				
+				<td>
+					<th:block th:each="pp : ${usuario.papeis}">
+						<span th:text="${pp.papel}"> Papel </span><br/>
+					</th:block>							
+				</td>
+				
 				<td>
 					<a class="btn btn-outline-danger btn-sm" 
 					   th:href="@{/usuario/admin/apagar/{id}(id=${usuario.id})}"
