--- a/entity-crud/src/main/resources/templates/auth/admin/admin-index.html
+++ b/entity-crud/src/main/resources/templates/auth/admin/admin-index.html
@@ -1,21 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 
-<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+<link rel="stylesheet"
+	th:href="@{/bootstrap-5.1.3-dist/css/bootstrap.min.css}">
+<script th:src="@{/jquery-3.6.0-dist/jquery-3.6.0.min.js}"></script>
+<script th:src="@{/bootstrap-5.1.3-dist/js/bootstrap.min.js}"></script>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Index administrador</title>
 
 </head>
-
 <body>
-
-<h3>Olá administrador</h3>	
-
+	<div th:replace="auth/auth-generica-nav :: navGenerica"></div>
+	
+	<div class="container"></div>
 </body>
-
 </html>
