--- a/entity-crud/src/main/resources/templates/auth/relator/relator-index.html
+++ b/entity-crud/src/main/resources/templates/auth/relator/relator-index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+<meta charset="UTF-8">
+<title>Insert title here</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	th:href="@{/bootstrap-5.1.3-dist/css/bootstrap.min.css}">
+<script th:src="@{/jquery-3.6.0-dist/jquery-3.6.0.min.js}"></script>
+<script th:src="@{/bootstrap-5.1.3-dist/js/bootstrap.min.js}"></script>
 
-
-<title>Index Relator</title>
 
 </head>
 <body>
-<h3>Olá Relator</h3>	
+	<div th:replace="auth/auth-generica-nav :: navGenerica"></div>
+	
+	<div class="container"></div>
 </body>
 </html>
