--- a/entity-crud/src/main/resources/templates/auth/user/user-index.html
+++ b/entity-crud/src/main/resources/templates/auth/user/user-index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
 
+<title>Insert title here</title>
 
-<title>Index usuário</title>
+<link rel="stylesheet"
+
+	th:href="@{/bootstrap-5.1.3-dist/css/bootstrap.min.css}">
+
+<script th:src="@{/jquery-3.6.0-dist/jquery-3.6.0.min.js}"></script>
+
+<script th:src="@{/bootstrap-5.1.3-dist/js/bootstrap.min.js}"></script>
 
 </head>
+
 <body>
-<h3>Olá usuário</h3>	
+
+	<div th:replace="auth/auth-generica-nav :: navGenerica"></div>
+
+	
+
+	<div class="container"></div>
+
 </body>
+
 </html>
