ostrando o nome do usuário logado na barra de navegação
bug solucionado no momento de exibir o nome, após fazer um mapeamentos nos arquivos de autenticação foi encontrado um bug na obtenção do nome de usuario logado no arquivo auth-nav linha10

--- a/entity-crud/src/main/resources/templates/login.html
+++ b/entity-crud/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 <body>
-	<div th:insert="fragments/publica-nav :: nav"></div>
+	<div th:replace="auth/auth-generica-nav :: navGenerica"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col">
