--- a/entity-crud/src/main/resources/templates/auth/admin/admin-listar-usuario.html
+++ b/entity-crud/src/main/resources/templates/auth/admin/admin-listar-usuario.html
@@ -14,7 +14,9 @@
 
 </head>
 <body>
-<div th:insert="fragments/publica-nav :: nav"></div>
+	
+<div th:replace="auth/auth-generica-nav :: navGenerica"></div>
+
 <div class="container">
   <div class="row">
   	
