--- a/entity-crud/src/main/resources/templates/auth/admin/admin-nav.html
+++ b/entity-crud/src/main/resources/templates/auth/admin/admin-nav.html
@@ -19,6 +19,7 @@
                         </div>
                     </li>
                 </ul>                
+                 <ul th:replace="auth/auth-nav :: nav"> </ul> <!-- adicionado --> 
                            
                 
             </div>
