--- a/entity-crud/src/main/resources/templates/auth/relator/relator-nav.html
+++ b/entity-crud/src/main/resources/templates/auth/relator/relator-nav.html
@@ -3,7 +3,7 @@
 <body>
   <nav th:fragment="nav" class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand">Relatorios</a>
+            <a href="#" class="navbar-brand">SIGA</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
