--- a/entity-crud/src/main/resources/templates/fragments/publica-nav.html
+++ b/entity-crud/src/main/resources/templates/fragments/publica-nav.html
@@ -3,7 +3,7 @@
 <body>
 	<nav th:fragment="nav" class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">CRUD </a>
+			<a class="navbar-brand" href="#">SIGA</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
@@ -15,12 +15,9 @@
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="/">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="/usuario/novo">Cadastrar</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="/usuario/admin/listar">Usuários</a>
-					</li>
+					</li>					
 					<li class="nav-item"><a class="nav-link" href="/login">Entrar</a>
 					</li>
-
 				</ul>
 			</div>
 		</div>
