--- a/entity-crud/src/main/resources/templates/publica-index.html
+++ b/entity-crud/src/main/resources/templates/publica-index.html
@@ -2,7 +2,7 @@
 <html  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>CRUD - Spring Boot e Vue js</title>
+<title>SIGA</title>
 
 <link rel="stylesheet" th:href="@{/bootstrap-5.1.3-dist/css/bootstrap.min.css}">
 <script th:src="@{/jquery-3.6.0-dist/jquery-3.6.0.min.js}"></script>
